--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "firebase": "^5.7.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-redux": "^6.0.0",
-    "react-redux-firebase": "^3.0.0-alpha.5",
+    "react-redux": "^5.1.1",
+    "react-redux-firebase": "^2.2.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2",
     "redux": "^4.0.1",
@@ -27,5 +27,10 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "electronWebpack": {
+    "whiteListedModules": [
+      "firebase"
+    ]
+  }
 }
