--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "fast-sort": "^1.5.4",
     "firebase": "^5.7.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
@@ -11,7 +12,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2",
     "redux": "^4.0.1",
-    "redux-firestore": "^0.5.8"
+    "redux-firestore": "^0.5.8",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
