--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.6",
     "fast-sort": "^1.5.4",
     "firebase": "^5.7.0",
     "react": "^16.6.3",
@@ -12,6 +13,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2",
     "redux": "^4.0.1",
+    "redux-auth-wrapper": "^2.0.3",
     "redux-firestore": "^0.5.8",
     "uuid": "^3.3.2"
   },
