--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "redux": "^4.0.1",
     "redux-auth-wrapper": "^2.0.3",
     "redux-firestore": "^0.5.8",
+    "redux-thunk": "^2.3.0",
     "uuid": "^3.3.2"
   },
   "scripts": {
